[package]
name = "zippy"
version = "0.1.3"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
license = "MIT"
description = "CLI-based un/zipping tool that's available anywhere Rust is."
documentation = "https://docs.rs/zippy"
homepage = "https://github.com/jjpe/zippy"
repository = "https://github.com/jjpe/zippy"
edition = "2018"

[dependencies]
clap = "2.34"
walkdir = "2.3"
zip = "0.6"
